--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Abuuzair's Site # the main title
 tagline: Site to display my Experience and Projects # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Site to display my Experience and Projects.
+  To display my Experience and Projects.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
